--- a/order-summary.html
+++ b/order-summary.html
@@ -6,64 +6,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Marie Custom Goods secure checkout for custom-crafted products.">
     <style>
+        /* ===== BACKGROUND: MATCHES MAIN SITE ===== */
         body {
             font-family: 'Inter', Arial, sans-serif;
             margin: 0; padding: 0;
-            background: #ffffff;
+            min-height: 100vh;
+            /* Gradient top (site header), pale green bg */
+            background: linear-gradient(180deg, #11803B 0%, #43B047 110px, #EAF7EC 110px, #EAF7EC 100%);
         }
+        /* Center the checkout "card" and add a soft shadow */
         .checkout-wrapper {
             max-width: 660px;
-            margin: 40px auto;
-            background: #10150d;
+            margin: 60px auto 40px auto;
+            background: #ffffff;
             border-radius: 18px;
-            box-shadow: 0 8px 32px rgba(23, 39, 17, 0.22), 0 1.5px 10px rgba(255,215,32,0.07);
+            box-shadow: 0 8px 36px rgba(0,40,20,0.18), 0 2px 12px rgba(17,128,59,0.10);
             padding: 0 0 30px 0;
             overflow: hidden;
             border: 2.5px solid #e4c900;
         }
+        /* Header (matches site: green gradient, yellow accent) */
         .header-bar {
-            background: #0d1a11;
+            background: linear-gradient(180deg, #168C44 0%, #43B047 100%);
             color: #e4c900;
             text-align: center;
-            padding: 26px 0 14px 0;
+            padding: 28px 0 18px 0;
             border-bottom-left-radius: 18px;
             border-bottom-right-radius: 18px;
-            box-shadow: 0 4px 22px #0008;
+            box-shadow: 0 4px 22px #0004;
         }
         .brand-logo {
             width: 74px; height: 74px; border-radius: 16px; object-fit: cover;
-            background: #000; box-shadow: 0 2px 14px #000a;
+            background: #fff; box-shadow: 0 2px 14px #000a;
             margin-bottom: 12px; border: 3px solid #e4c900;
         }
         .header-bar h1 {
-            margin: 0; font-size: 2.1em; font-weight: 800; letter-spacing: 0.04em;
-            color: #e4c900;
-            text-shadow: 2px 2px 0 #000, 0 2px 16px #0d1a11c0;
+            margin: 0; font-size: 2.1em; font-weight: 900; letter-spacing: 0.04em;
+            color: #fff;
+            text-shadow: 2px 2px 0 #168C44, 0 2px 14px #43B047a0;
         }
         .header-bar .subtitle {
-            color: #fff; font-size:1.09em; font-weight:400; margin-top:4px; letter-spacing:0.02em;
-            text-shadow: 0 2px 12px #000a;
+            color: #fff; font-size:1.12em; font-weight:400; margin-top:4px; letter-spacing:0.02em;
+            text-shadow: 0 2px 8px #168C44a0;
         }
+        /* Stepper (match site's button accent) */
         .stepper {
             display: flex; justify-content: space-around; align-items: center;
-            margin: 30px 0 36px 0;
+            margin: 32px 0 36px 0;
         }
         .step {
-            background: #132818;
-            color: #e4c900;
+            background: #EAF7EC;
+            color: #168C44;
             border-radius: 50px;
             font-weight: 700;
-            padding: 8px 24px;
-            font-size: 1.08em;
+            padding: 9px 28px;
+            font-size: 1.07em;
             border: 2px solid #e4c900;
             margin: 0 8px;
             letter-spacing: 0.02em;
-            box-shadow: 0 2px 10px #121c10b0;
+            box-shadow: 0 2px 8px #43B04720;
+            transition: background 0.16s, color 0.16s;
         }
         .step.active {
-            background: #e4c900; color: #111; border-color: #e4c900;
+            background: #e4c900; color: #168C44; border-color: #e4c900;
             text-shadow: none;
         }
+        /* Order summary card */
         .order-section {
             padding: 18px 34px 12px 34px;
         }
@@ -73,36 +81,37 @@
             margin-bottom: 15px;
         }
         .order-card {
-            background: #1e2e20;
-            border: 2px solid #e4c900;
+            background: #F6FFF8;
+            border: 2px solid #43B047;
             border-radius: 14px;
             padding: 16px;
             display: flex; justify-content: space-between; align-items: center;
-            box-shadow: 0 2px 16px #0006;
+            box-shadow: 0 2px 10px #168C4414;
         }
         .order-card .item-title {
-            font-weight: 700; color: #e4c900; font-size: 1.09em; text-shadow: 1px 1px 7px #000a;
+            font-weight: 700; color: #168C44; font-size: 1.09em;
         }
         .order-card .item-qty {
-            color: #fff; font-weight: 600; font-size: 1em;
+            color: #222; font-weight: 600; font-size: 1em;
         }
         .order-card .item-price {
-            color: #e4c900; font-weight: 800; font-size: 1.1em;
-            margin-left: 18px; text-shadow: 1px 1px 7px #000c;
+            color: #168C44; font-weight: 800; font-size: 1.1em;
+            margin-left: 18px;
         }
         .order-total {
-            font-size: 1.21em;
+            font-size: 1.22em;
             color: #fff;
-            background: #2e5832;
+            background: linear-gradient(90deg, #43B047 60%, #168C44 100%);
             font-weight: 800;
             border-radius: 8px;
             text-align: right;
-            padding: 11px 22px;
-            margin-bottom: 4px;
+            padding: 13px 22px;
+            margin-bottom: 8px;
             border: 2px solid #e4c900;
             letter-spacing: 0.01em;
-            text-shadow: 1px 1px 10px #000d;
+            text-shadow: 1px 1px 8px #168C44b0;
         }
+        /* Inputs (rounded, soft green/yellow focus, pale bg) */
         form.checkout-form {
             margin: 22px 0 0 0;
             display: flex; flex-direction: column; gap: 10px;
@@ -112,20 +121,22 @@
         }
         .input-group input,
         .input-group textarea {
-            width: 100%; border: none; border-bottom: 2px solid #6a7a4a;
-            background: transparent; padding: 10px 8px 7px 8px;
+            width: 100%; border: none; border-bottom: 2px solid #b6e4c5;
+            background: #F6FFF8;
+            padding: 10px 8px 7px 8px;
             font-size: 1.09em; font-family: inherit;
-            color: #e4c900;
-            transition: border 0.2s, color 0.2s;
+            color: #168C44;
+            border-radius: 7px 7px 0 0;
+            transition: border 0.2s, color 0.2s, background 0.22s;
         }
         .input-group input:focus,
         .input-group textarea:focus {
-            outline: none; border-bottom: 2.5px solid #e4c900; color: #fff;
+            outline: none; border-bottom: 2.5px solid #e4c900; color: #168C44; background: #eaf7ec;
         }
         .input-group label {
             position: absolute; left: 10px; top: 10px;
-            font-size: 0.98em; color: #6a7a4a;
-            background: #10150d; padding: 0 3px;
+            font-size: 0.98em; color: #43B047;
+            background: #ffffff; padding: 0 3px;
             pointer-events: none; transition: 0.18s;
         }
         .input-group input:focus + label,
@@ -133,8 +144,9 @@
         .input-group textarea:focus + label,
         .input-group textarea:not(:placeholder-shown) + label {
             top: -18px; font-size: 0.88em; color: #e4c900;
-            background: #10150d;
+            background: #ffffff;
         }
+        /* Payment options */
         .payment-methods-block {
             margin: 22px 0 0 0; display: flex; flex-direction: column; gap: 11px;
         }
@@ -142,17 +154,17 @@
             display: flex; gap: 16px; flex-wrap: wrap;
         }
         .pay-radio-label {
-            background: #1e2e20;
-            border: 2px solid #6a7a4a;
-            border-radius: 10px; padding: 9px 18px;
+            background: #F6FFF8;
+            border: 2px solid #b6e4c5;
+            border-radius: 10px; padding: 10px 20px;
             display: flex; align-items: center; gap: 9px;
             cursor: pointer; font-size: 1.07em; font-weight: 700;
-            color: #e4c900;
+            color: #168C44;
             transition: border 0.21s, background 0.21s, color 0.2s;
-            box-shadow: 0 2px 8px #0006;
+            box-shadow: 0 2px 8px #43B04710;
         }
         .pay-radio-label.selected {
-            background: #e4c900; color: #10150d; border: 2px solid #e4c900;
+            background: #e4c900; color: #168C44; border: 2px solid #e4c900;
         }
         .pay-radio-label img {
             width: 28px; height: 28px; object-fit: contain; border-radius: 7px;
@@ -160,24 +172,24 @@
         }
         .pay-radio-label input[type="radio"] { display: none; }
         .submit-btn {
-            margin-top: 25px; font-size: 1.19em; font-weight: 800;
-            background: linear-gradient(90deg, #e4c900 60%, #183414 100%);
-            color: #10150d; border: none; border-radius: 8px;
-            padding: 15px 0; cursor: pointer; box-shadow: 0 2px 14px #000b;
+            margin-top: 25px; font-size: 1.19em; font-weight: 900;
+            background: linear-gradient(90deg, #e4c900 60%, #168C44 100%);
+            color: #168C44; border: none; border-radius: 8px;
+            padding: 15px 0; cursor: pointer; box-shadow: 0 2px 14px #43B04722;
             letter-spacing: 0.02em;
             transition: background 0.18s, color 0.18s;
         }
-        .submit-btn:hover { background: linear-gradient(90deg, #183414 60%, #e4c900 100%); color: #fff;}
+        .submit-btn:hover { background: linear-gradient(90deg, #168C44 60%, #e4c900 100%); color: #fff;}
         .required { color: #e4c900; }
         .chat-success {
             margin: 36px auto 0 auto;
             max-width: 420px;
-            background: #182312;
+            background: #EAF7EC;
             border-radius: 18px 18px 18px 6px;
             border: 2.5px solid #e4c900;
-            color: #e4c900;
-            box-shadow: 0 2px 18px #000c;
-            font-size: 1.16em;
+            color: #168C44;
+            box-shadow: 0 2px 12px #43B04744;
+            font-size: 1.17em;
             padding: 26px 22px;
             text-align: left;
             position: relative;
@@ -186,30 +198,34 @@
         .chat-success:before {
             content: ""; display: block;
             position: absolute; left: -16px; bottom: 18px;
-            width: 24px; height: 24px; background: #182312;
+            width: 24px; height: 24px; background: #EAF7EC;
             border-bottom-right-radius: 18px;
         }
+        /* Info box (match site's pale card, green/yellow accent) */
         .info-box {
             padding: 22px 32px;
-            background: linear-gradient(120deg, #10150d 0%, #2e5832 100%);
+            background: #F6FFF8;
             border-radius: 14px; margin-top: 40px;
-            color: #e4c900; font-size: 1.07em; font-weight: 600;
+            color: #168C44; font-size: 1.07em; font-weight: 600;
             border: 2px solid #e4c900;
-            box-shadow: 0 4px 18px #0004;
+            box-shadow: 0 4px 18px #43B04710;
         }
-        .info-box h2 { color: #e4c900; font-size: 1.13em; margin-bottom: 8px;}
+        .info-box h2 { color: #168C44; font-size: 1.13em; margin-bottom: 8px;}
         .info-box ul { margin: 10px 0 0 1.3em; padding:0;}
         .info-box li { margin-bottom: 8px; }
+        .info-box a { color:#e4c900;text-decoration:underline; }
         .back-link {
-            display: inline-block; margin: 24px 0 0 32px; color: #e4c900; font-weight: 700;
+            display: inline-block; margin: 24px 0 0 32px; color: #fff; font-weight: 700;
             text-decoration: none; padding: 12px 24px; border-radius: 8px;
-            background: #10150d; border: 2px solid #e4c900; transition: background 0.17s, color 0.18s;
-            box-shadow: 0 2px 10px #0006;
+            background: linear-gradient(90deg, #168C44 70%, #43B047 100%);
+            border: 2px solid #e4c900; transition: background 0.17s, color 0.18s;
+            box-shadow: 0 2px 10px #168C441a;
         }
-        .back-link:hover { background: #e4c900; color:#10150d; }
-        .empty { color: #e4c900; text-align:center; margin: 32px 0; font-style:italic;}
+        .back-link:hover { background: #e4c900; color:#168C44; }
+        .empty { color: #168C44; text-align:center; margin: 32px 0; font-style:italic;}
+        /* ==== Responsive ==== */
         @media (max-width:700px) {
-            .checkout-wrapper { max-width:98vw; }
+            .checkout-wrapper { max-width:98vw; margin: 36px auto 14px auto;}
             .order-section, .info-box { padding: 11px 7vw; }
         }
         @media (max-width:500px) {
@@ -217,6 +233,7 @@
             .order-section, .info-box { padding: 11px 4vw; }
             .chat-success { padding: 16px 8px; }
             .cards-list { gap: 10px; }
+            .header-bar h1 { font-size: 1.3em;}
         }
     </style>
 </head>
@@ -278,7 +295,7 @@
                     <label for="phoneField">Mobile Number <span class="required">*</span></label>
                 </div>
                 <div class="payment-methods-block">
-                    <div style="font-weight:700; margin-bottom:6px; color:#e4c900;">Choose Payment Method <span class="required">*</span></div>
+                    <div style="font-weight:700; margin-bottom:6px; color:#168C44;">Choose Payment Method <span class="required">*</span></div>
                     <div class="pay-radio-group" id="paymentRadios"></div>
                     <input type="hidden" name="payment" id="paymentHidden" required>
                 </div>
@@ -299,13 +316,12 @@
                 <li><b>Order Verification:</b> Our team will reach out to confirm your selected product, size, color, customization preferences, and shipping details to ensure accuracy before payment.</li>
                 <li><b>Secure Payment:</b> A QR code or payment link will be sent based on your chosen method. <b>Please complete payment within 24 hours</b> to confirm your order and avoid automatic cancellation.</li>
                 <li><b>Processing Time:</b> Orders are typically fulfilled within <b>1–3 business days</b> after payment confirmation. Delivery times may vary depending on your location and the selected courier.</li>
-                <li><b>Customer Support:</b> Need help or have questions? Reach out via email at <a style="color:#e4c900;text-decoration:underline;" href="mailto:contact@mariecustomgoods.com">contact@mariecustomgoods.com</a>.</li>
+                <li><b>Customer Support:</b> Need help or have questions? Reach out via email at <a href="mailto:contact@mariecustomgoods.com">contact@mariecustomgoods.com</a>.</li>
             </ul>
             <div style="margin-top:12px;">
                 <b>Marie Custom Goods – Custom creations, delivered with care and precision.</b>
             </div>
         </aside>
-
         <a href="index.html" class="back-link">← Back to Shop</a>
     </div>
     <script>
