--- a/index.html
+++ b/index.html
@@ -41,12 +41,10 @@
 
         header {
             background-color: #168C44;
-            background-image: 
-                url('images/LOGO.png'), 
-                linear-gradient(180deg, #168C44 0%, #43B047 100%);
-            background-size: 90px 90px, 100% 100%;
-            background-repeat: repeat, no-repeat;
-            background-position: center center, center center;
+            background-image: linear-gradient(180deg, #168C44 0%, #43B047 100%);
+            background-size: 100% 100%;
+            background-repeat: no-repeat;
+            background-position: center center;
             color: #fff;
             text-align: center;
             padding: 28px 0 18px 0;
@@ -54,13 +52,26 @@
             box-shadow: 0 4px 22px #0004;
             position: relative;
             z-index: 1;
+            isolation: isolate; /* <-- Penting supaya ::before tidak menutupi isi header */
+        }
+        header::before {
+            content: "";
+            position: absolute;
+            inset: 0;
+            background-image: url('images/LOGO.png');
+            background-size: 90px 90px;
+            background-repeat: repeat;
+            background-position: center center;
+            opacity: 0.18;        /* SEMAKIN KECIL, SEMAKIN TRANSPARAN, misal 0.10, 0.15, dst */
+            pointer-events: none; /* Biar nggak ganggu klik/tap */
+            z-index: 0;
         }
         #main-logo {
             animation: popInOutMainLogo 4s ease-in-out infinite;
             display: block;
             margin: 0 auto;
             border: 3px solid #e4c900;
-            border-radius: 16px;
+            border-radius: 100px;
             background: #fff;
             box-shadow: 0 2px 14px #000a;
         }
@@ -76,8 +87,8 @@
         .hero {
             text-align: center;
             padding: 40px;
-            background: linear-gradient(180deg, #43B047 100%, #168C44 0%);
-            color: #fff;
+            background: #e8f5e9;
+            color: #155824;
             box-shadow: 0 4px 22px #0004;
         }
         .hero h1 { font-size: 2.5em; margin-bottom: 10px; }
@@ -264,7 +275,7 @@
         footer a { color: #28a745; text-decoration: none; font-weight: bold; }
         footer a:hover { text-decoration: underline; }
 
-        .testimonials { background-color: #f1f1f1; padding: 24px 8px; text-align: center; }
+        .testimonials { background-color: #fff; padding: 24px 8px; text-align: center; }
         .testimonials h2 { margin-bottom: 10px; font-size:1.3em; }
         #testimonial-slider {
             display: flex;
